--- a/az104/data/page_344.html
+++ b/az104/data/page_344.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" defhref="font-awesome.min.css" />
 <script>
@@ -77,7 +78,7 @@ function myFunction() {
 	</div>
 </div>
 </div>
-<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="/az104/data/page_337.html">Prv</a></p></td> <td style="width: 40%;"><p style="text-align: center; left;margin-right: 29px;"><a href="https://cloudtech.how/microsoft/exam-az-104-microsoft-azure-administrator/az-104-question-227" rel="noopener noreferrer" target="_blank">Referance Page</a></p></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="/az104/data/page_344.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="804539">
+<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="page_342.html">Prv</a></p></td> <td style="width: 40%;"><p style="text-align: center; left;margin-right: 29px;"><a href="https://cloudtech.how/microsoft/exam-az-104-microsoft-azure-administrator/az-104-question-228" rel="noopener noreferrer" target="_blank">Referance Page</a></p></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="page_349.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="804539">
 <p class="card-text">
 							
 								HOTSPOT -<br/>You manage two Azure subscriptions named Subscription1 and Subscription2.<br/>Subscription1 has following virtual networks:<br/><img class="in-exam-image" src="https://www.examtopics.com/assets/media/exam-media/04223/0043900001.png"/><br/>The virtual networks contain the following subnets:<br/><img class="in-exam-image" src="https://www.examtopics.com/assets/media/exam-media/04223/0044000001.png"/><br/>Subscription2 contains the following virtual network:<br/>✑ Name: VNETA<br/>✑ Address space: 10.10.128.0/17<br/>✑ Location: Canada Central<br/>VNETA contains the following subnets:<br/><img class="in-exam-image" src="https://www.examtopics.com/assets/media/exam-media/04223/0044000005.png"/><br/>For each of the following statements, select Yes if the statement is true. Otherwise, select No.<br/>NOTE: Each correct selection is worth one point.<br/>Hot Area:<br/><img class="in-exam-image" src="https://www.examtopics.com/assets/media/exam-media/04223/0044100001.png"/><br/>
