--- a/az104/data/page_443.html
+++ b/az104/data/page_443.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" defhref="font-awesome.min.css" />
 <script>
@@ -77,7 +78,7 @@ function myFunction() {
 	</div>
 </div>
 </div>
-<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="/az104/data/page_440.html">Prv</a></p></td> <td style="width: 40%;"></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="/az104/data/page_442.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="860468">
+<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="page_442.html">Prv</a></p></td> <td style="width: 40%;"></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="page_444.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="860468">
 <p class="card-text">
 							
 								HOTSPOT<br/> -<br/><br/>You have an Azure subscription that is linked to an Azure AD tenant. The tenant contains two users named User1 and User2.<br/><br/>The subscription contains the resources shown in the following table.<br/><br/><img src="https://img.examtopics.com/az-104/image619.png"/><br/><br/>The subscription contains the alert rules shown in the following table.<br/><br/><img src="https://img.examtopics.com/az-104/image620.png"/><br/><br/>The users perform the following action:<br/><br/>•	User1 creates a new virtual disk and attaches the disk to VM1<br/>•	User2 creates a new resource tag and assigns the tag to RG1 and VM1<br/><br/>Which alert rules are triggered by each user? To answer, select the appropriate options in the answer area.<br/><br/>NOTE: Each correct selection is worth one point.<br/><br/><img src="https://img.examtopics.com/az-104/image621.png"/>
